# nextstd

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  USAGE.md  _typos.toml  cliff.toml  rumdl.toml
.ccls-cache/@@home@vaishnav@Desktop@My_Projects@NextStd@nextstd/: @usr@lib@clang@22@include@__stddef_header_macro.h.blob  @usr@lib@clang@22@include@__stddef_max_align_t.h.blob  @usr@lib@clang@22@include@__stddef_null.h.blob  @usr@lib@clang@22@include@__stddef_nullptr_t.h.blob  @usr@lib@clang@22@include@__stddef_offsetof.h.blob  @usr@lib@clang@22@include@__stddef_ptrdiff_t.h.blob  @usr@lib@clang@22@include@__stddef_size_t.h.blob  @usr@lib@clang@22@include@__stddef_wchar_t.h.blob  @usr@lib@clang@22@include@stdbool.h.blob  @usr@lib@clang@22@include@stddef.h.blob
.ccls-cache/@home@vaishnav@Desktop@My_Projects@NextStd@nextstd/: examples@18_http.c  examples@18_http.c.blob  include@ns.h.blob  include@ns_error.h  include@ns_error.h.blob  include@ns_http.h  include@ns_http.h.blob  include@ns_print.h  include@ns_print.h.blob  include@ns_read.h  include@ns_read.h.blob  include@ns_string.h  include@ns_string.h.blob
.githooks/: pre-commit
crates/ns_io/: Cargo.toml
crates/ns_io/src/: input.rs  print.rs
examples/: 01_print_integer.c  02_print_float_double.c  03_print_string.c  04_user_input.c  05_sso_strings.c  06_errors.c  07_colors.c  08_string_error.c  09_vectors.c  10_hashmap.c  16_process.c  17_concurrent_process.c  18_http.c
include/: ns.h  ns_color.h  ns_data.h  ns_print.h  ns_process.h  ns_read.h  ns_string.h
(+15 files in other folders)
